--- a/src/AppBundle/Resources/public/css/icons.css
+++ b/src/AppBundle/Resources/public/css/icons.css
@@ -1,20 +1,16 @@
-@font-face{font-family:'netrunner';src:url('../fonts/netrunner.eot');src:url('../fonts/netrunner.eot?#iefix') format('embedded-opentype'),url('../fonts/netrunner.woff') format('woff'),url('../fonts/netrunner.ttf') format('truetype'),url('../fonts/netrunner.svg#netrunner') format('svg');font-weight: normal;font-style: normal;}
-
-.icon {
-	font-family: 'netrunner';
-	speak: none;
-	font-style: normal;
+@font-face {
+	font-family: 'agot2';
+	src:url('../fonts/agot2.eot?-cih4mt');
+	src:url('../fonts/agot2.eot?#iefix-cih4mt') format('embedded-opentype'),
+		url('../fonts/agot2.ttf?-cih4mt') format('truetype'),
+		url('../fonts/agot2.woff?-cih4mt') format('woff'),
+		url('../fonts/agot2.svg?-cih4mt#agot2') format('svg');
 	font-weight: normal;
-	font-variant: normal;
-	text-transform: none;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	margin:0px 1px;
-	line-height: 1;
+	font-style: normal;
 }
-.icon,
-.icon-bg:before {
-	font-family: 'netrunner';
+
+[class^="icon-"], [class*=" icon-"] {
+	font-family: 'agot2';
 	speak: none;
 	font-style: normal;
 	font-weight: normal;
@@ -26,106 +22,40 @@
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
-.icon-bg:before {
-	width: 100%;
-	height: 100%;
-	font-size: 5em;
-	text-align: center;
-	display: block;
-	position: absolute;
-	line-height:4em;
-	left: 0;
-	opacity: 0.2;
-    z-index: 0;
-}
-.icon-mu:before {
-	content: "\e60b";
-}
 
-.icon-mu1:before {
+.icon-baratheon:before {
 	content: "\e600";
 }
-
-.icon-mu2:before {
+.icon-greyjoy:before {
 	content: "\e601";
 }
-
-.icon-mu3:before {
+.icon-intrigue:before {
 	content: "\e602";
 }
-
-.icon-agenda:before {
+.icon-lannister:before {
 	content: "\e603";
 }
-
-.icon-anarch:before {
+.icon-martell:before {
 	content: "\e604";
 }
-
-.icon-click:before {
+.icon-military:before {
 	content: "\e605";
 }
-
-.icon-credit:before {
+.icon-nightswatch:before {
 	content: "\e606";
 }
-
-.icon-criminal:before {
+.icon-power:before {
 	content: "\e607";
 }
-
-.icon-haas-bioroid:before {
+.icon-stark:before {
 	content: "\e608";
 }
-
-.icon-jintekisimple:before {
+.icon-targaryen:before {
 	content: "\e609";
 }
-
-.icon-jinteki:before {
+.icon-tyrell:before {
 	content: "\e60a";
 }
-
-.icon-nbn:before {
-	content: "\e60c";
-}
-
-.icon-recurring-credit:before {
-	content: "\e60d";
-}
-
-.icon-rez:before {
-	content: "\e60e";
-}
-
-.icon-shaper:before {
-	content: "\e60f";
-}
-
-.icon-shaper-smooth:before {
-	content: "\e610";
-}
-
-.icon-subroutine:before {
-	content: "\e611";
-}
-
-.icon-trash:before {
-	content: "\e612";
-}
-
-.icon-weyland-consortium:before {
-	content: "\e613";
-}
-
-.icon-link-half-bottom:before {
-	content: "\e614";
-}
-
-.icon-link-half-top:before {
-	content: "\e615";
-}
-
-.icon-link:before {
-	content: "\e616";
+.icon-unique:before {
+	content: "\e60b";
 }
