--- a/src/AppBundle/Resources/views/Builder/tab-pane-build.html.twig
+++ b/src/AppBundle/Resources/views/Builder/tab-pane-build.html.twig
@@ -9,8 +9,8 @@
 		<div class="btn-group">
 			<button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">Options <span class="caret"></span></button>
 			<ul class="dropdown-menu pull-right" id="config-options">
-			    <li><a href="#"><label><input type="checkbox" name="show-disabled"> Show unusable cards</label></a></li>
-				<li><a href="#"><label><input type="checkbox" name="only-deck"> Show only used cards</label></a></li>
+			    <li><a href="#"><label><input type="checkbox" name="show-unusable"> Show unusable cards</label></a></li>
+				<li><a href="#"><label><input type="checkbox" name="show-only-deck"> Show only used cards</label></a></li>
 				<li><a href="#"><label><input type="radio" name="display-column" value="1"> Display on 1 column</label></a></li>
 				<li><a href="#"><label><input type="radio" name="display-column" value="2"> Display on 2 columns</label></a></li>
 				<li><a href="#"><label><input type="radio" name="display-column" value="3"> Display on 3 columns</label></a></li>
