--- a/src/AppBundle/Resources/views/Builder/tab-pane-build.html.twig
+++ b/src/AppBundle/Resources/views/Builder/tab-pane-build.html.twig
@@ -36,11 +36,11 @@
 <!-- Search Bar -->
 
 <div class="row" style="margin-bottom:10px">
-    <div class="col-xs-6">
-        <div id="faction_code" data-filter="faction_code" data-toggle="buttons"></div>
+    <div class="col-xs-7">
+        <div id="faction_code" class="btn-group" data-filter="faction_code" data-toggle="buttons"></div>
     </div>
-    <div class="col-xs-6 text-right">
-        <div id="type_code" data-filter="type_code" data-toggle="buttons"></div>
+    <div class="col-xs-5 text-right">
+        <div id="type_code" class="btn-group" data-filter="type_code" data-toggle="buttons"></div>
     </div>
 </div>
 
