--- a/src/AppBundle/Resources/views/Builder/deckedit.html.twig
+++ b/src/AppBundle/Resources/views/Builder/deckedit.html.twig
@@ -5,6 +5,8 @@
 	{# <script src="{{ asset('/bundles/app/js/app.card_modal.js') }}"></script> #}
 	{# <script src="{{ asset('/bundles/app/js/app.suggestions.js') }}"></script> #}
 	{# <script src="{{ asset('/bundles/app/js/app.diff.js') }}"></script> #}
+	<script src="{{ asset('/bundles/app/js/app.textcomplete.js') }}"></script>
+	<script src="{{ asset('/bundles/app/js/app.markdown.js') }}"></script>
 	<script src="{{ asset('/bundles/app/js/app.smart_filter.js') }}"></script>
 	<script src="{{ asset('/bundles/app/js/app.deck.js') }}"></script>
 	<script src="{{ asset('/bundles/app/js/ui.deckedit.js') }}"></script>
