--- a/src/AppBundle/Resources/views/macros.html.twig
+++ b/src/AppBundle/Resources/views/macros.html.twig
@@ -3,5 +3,5 @@
 {% endmacro %}
 
 {% macro card_name_with_pack_no_link(card) %}
-<a class="card-tooltip" data-code="{{ card.code }}">{{ card.name }} <i>({{ card.pack.name }})</i></a>
+<a class="card-tip" data-code="{{ card.code }}">{{ card.name }} <i>({{ card.pack.name }})</i></a>
 {% endmacro %}
