--- a/src/AppBundle/Resources/views/Search/card-name.html.twig
+++ b/src/AppBundle/Resources/views/Search/card-name.html.twig
@@ -1,2 +1,2 @@
 {% if card.isUnique == true %}<span class="icon-unique"></span> {% endif %}
-<a href="{{ card.url }}" class="card-tooltip card-name{% if card.available == false %} card-preview{% endif %}" data-code="{{ card.code }}">{{ card.name }}</a>
+<a href="{{ card.url }}" class="card-tip card-name{% if card.available == false %} card-preview{% endif %}" data-code="{{ card.code }}">{{ card.name }}</a>
