--- a/src/AppBundle/Resources/views/Search/display-list.html.twig
+++ b/src/AppBundle/Resources/views/Search/display-list.html.twig
@@ -19,7 +19,7 @@
    {% set card = cards[i] %}
 	<td data-th="Name">
 		{% if card.isUnique == true %}<span class="icon-unique"></span>{% endif %}
-		<a href="{{ card.url }}" class="card-tooltip{% if card.available == false %} card-preview{% endif %}" data-code="{{ card.code }}">{{ card.name }}</a>
+		<a href="{{ card.url }}" class="card-tip{% if card.available == false %} card-preview{% endif %}" data-code="{{ card.code }}">{{ card.name }}</a>
 	</td>
 	<td data-th="Faction">{{ card.faction_name }}</td>
 	<td data-th="Cost">{{ card.cost }}</td>
