--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -148,3 +148,15 @@ td.type, td.faction {
 #deck-gallery table td > div { height: 100px; overflow: visible; position: relative }
 #deck-gallery table td > div > img { height: 100% ; border: 1px solid white; border-radius: 10px;}
 #deck-gallery table td > div > div { background: rgba(0, 0, 0, 0.5); position: absolute; left: 1px; bottom: 1px; color: white; width: 24px; height: 24px; line-height: 24px; font-size: 16px; font-weight: bold; text-align: center; border-radius: 15px; font-family: monospace }
+
+/********* DRAW SIMULATOR ************/
+
+#table-draw-simulator-content img.card-image {width:99px;float:left;margin:5px;box-shadow: black 0px 0px 5px;border-radius: 5px;}
+#table-draw-simulator-content img.card-image.trashed {opacity: 0.25;box-shadow: none;}
+#table-draw-simulator-content img.card-image.trashed:hover {opacity: 0.75;}
+#table-draw-simulator-content div.card-proxy {background:#888;color:white;width:99px;height:138px;float:left;margin:5px;box-shadow: black 0px 0px 5px;border-radius: 5px;}
+#table-draw-simulator-content img.card-proxy.trashed {opacity: 0.25;box-shadow: none;}
+#table-draw-simulator-content img.card-proxy.trashed:hover {opacity: 0.75;}
+#table-draw-simulator-content div.card-proxy div{position: relative;top: 50%; transform: translateY(-50%);text-align:center}
+#draw-simulator-special {display: none;}
+
