--- a/src/AppBundle/Resources/views/Builder/deckedit.html.twig
+++ b/src/AppBundle/Resources/views/Builder/deckedit.html.twig
@@ -1,7 +1,9 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
 {% block javascripts %}
-	{# <script src="{{ asset('/bundles/app/js/app.draw_simulator.js') }}"></script> #}
+	<script src="{{ asset('/bundles/app/js/app.binomial.js') }}"></script>
+	<script src="{{ asset('/bundles/app/js/app.hypergeometric.js') }}"></script>
+	<script src="{{ asset('/bundles/app/js/app.draw_simulator.js') }}"></script>
 	{# <script src="{{ asset('/bundles/app/js/app.card_modal.js') }}"></script> #}
 	{# <script src="{{ asset('/bundles/app/js/app.suggestions.js') }}"></script> #}
 	{# <script src="{{ asset('/bundles/app/js/app.diff.js') }}"></script> #}
