--- a/src/AppBundle/Resources/views/Builder/tab-pane-history.html.twig
+++ b/src/AppBundle/Resources/views/Builder/tab-pane-history.html.twig
@@ -1,11 +1,8 @@
-
-    
-
 <!-- History -->
 <div class="row">
-	<div class="col-sm-12">
+	<div class="col-sm-12" id="history">
 	   <div class="progress">
-	       <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="60" style="width:0%" id="history-timer-bar"><span class="sr-only">Time remaining</span></div>
+	       <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="60" style="width:0%"><span class="sr-only">Time remaining</span></div>
 	   </div>
 		<table class="table">
 		  <thead>
@@ -15,13 +12,13 @@
 		          <th>Action</th>
 		      </tr>
 		  </thead>
-		  <tbody id="tbody-history">
+		  <tbody>
 		  </tbody>
 		</table>
 	</div><!-- /.col-sm-12 -->
 </div><!-- /.row -->
 <!-- History -->
-    
+
 <!-- Published decklists Table -->
 <table class="table table-condensed" id="table-predecessor">
 	<thead>
@@ -43,7 +40,3 @@
 	</tbody>
 </table>
 <!-- Published decklists Table -->
-    
-    
-    
-    
