--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -135,6 +135,7 @@ td.type, td.faction {
 }
 
 /********* LIST OF DECKS ************/
+
 #decks td {
 	vertical-align: middle;
 }
@@ -159,4 +160,15 @@ td.type, td.faction {
 #table-draw-simulator-content img.card-proxy.trashed:hover {opacity: 0.75;}
 #table-draw-simulator-content div.card-proxy div{position: relative;top: 50%; transform: translateY(-50%);text-align:center}
 #draw-simulator-special {display: none;}
+
+/*********** TYPEAHEAD **************/
+
+.twitter-typeahead{width:100%;background-color:#fff}
+.twitter-typeahead .tt-hint{color:#aaa;margin-left:11px;margin-top:4px;display:none}
+.twitter-typeahead .tt-query{margin-bottom:0}
+.tt-dropdown-menu{min-width:160px;margin-top:2px;padding:5px 0;background-color:#fff;border:1px solid #ccc;border:1px solid rgba(0,0,0,.2);*border-right-width:2px;*border-bottom-width:2px;-webkit-border-radius:6px;-moz-border-radius:6px;border-radius:6px;-webkit-box-shadow:0 5px 10px rgba(0,0,0,.2);-moz-box-shadow:0 5px 10px rgba(0,0,0,.2);box-shadow:0 5px 10px rgba(0,0,0,.2);-webkit-background-clip:padding-box;-moz-background-clip:padding;background-clip:padding-box}
+.tt-suggestion{display:block;padding:3px 20px}
+.tt-suggestion.tt-cursor{color:#fff;background-color:#0081c2;background-image:-moz-linear-gradient(top,#08c,#0077b3);background-image:-webkit-gradient(linear,0 0,0 100%,from(#08c),to(#0077b3));background-image:-webkit-linear-gradient(top,#08c,#0077b3);background-image:-o-linear-gradient(top,#08c,#0077b3);background-image:linear-gradient(to bottom,#08c,#0077b3);background-repeat:repeat-x;filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc',endColorstr='#ff0077b3',GradientType=0)}
+.tt-suggestion.tt-cursor a{color:#fff}
+.tt-suggestion p{margin:0}
 
